# utopiaplayer

./: CMakeLists.txt  configure
libutopiadb/: CMakeLists.txt  README  configure
libutopiadb/res/: resources.qrc
libutopiadb/scripts/: Doxyfile.in  qt-4.1.2.tag
libutopiadb/src/: CMakeLists.txt  album.cpp  album.h  albumset.cpp  albumset.h  artist.cpp  artist.h  blockparser.cpp  blockparser.h  composer.cpp  composer.h  cover.cpp  cover.h  credit.cpp  credit.h  genre.cpp  genre.h  individual.cpp  individual.h  metabase.h  mood.cpp  mood.h  publisher.cpp  publisher.h  qgzipfile.h  song.cpp  song.h  songedition.cpp  songedition.h  songfile.cpp  songfile.h  songset.cpp  songset.h  sqlmetabase.cpp  staff.cpp  staff.h  tagid.cpp  tagid.h  utopiablock.cpp  utopiablock.h  (+2 more)
libutopiadb/tests/: tests.pro
libutopiadb/ui/: dataobjecteditor.ui  electroniccopy.ui  releaseinfo.ui
libutopiaplayer/: CMakeLists.txt
libutopiaplayer/adapters/: CurrentSongAdapter.h
libutopiaplayer/src/: APEv2.cpp  APEv2.h  AddRemoveTestDialog.h  AdvancedTag.h  AlbumList.cpp  AlbumList.h  Application.cpp  Application.h  ArtLabel.cpp  ArtLabel.h  AudioFile.cpp  AudioThread.cpp  AudioThread.h  BackgroundProcess.cpp  BackgroundProcess.h  CMakeLists.txt  ComponentList.cpp  ComponentList.h  DatabaseList.cpp  DatabaseList.h  DatabasePlugin.h  Device.h  DeviceManager.h  FileProperties.cpp  FileProperties.h  FileTypeFactory.cpp  GUIManager.cpp  GUIManager.h  ID3v1.h  InsertAlbum.cpp  InsertAlbum.h  InsertArtist.cpp  InsertArtist.h  InsertGenre.cpp  InsertGenre.h  Library.h  Logger.cpp  Logger.h  Login.cpp  Login.h  (+70 more)
plugins/: CMakeLists.txt
plugins/codec/mp3/src/: CMakeLists.txt  MP3File.h  MP3FilePlugin.cpp  MP3FilePlugin.h
plugins/device/ipod/src/: CMakeLists.txt  iPodNotes.cpp  iPodNotes.h  ipod.cpp  ipod.h  ipoddb.h  ipodplugin.cpp  ipodplugin.h  ipodtypes.h  mhdb.h
plugins/output/alsa/src/: ALSAPlugin.cpp  ALSAPlugin.h  CMakeLists.txt
plugins/output/gstreamer/src/: CMakeLists.txt  gstreamerplugin.cpp
plugins/output/xine/src/: CMakeLists.txt  xineplugin.cpp
utopiablockbrowser/: CMakeLists.txt
utopiablockbrowser/src/: Browser.cpp  CMakeLists.txt  UtopiaBrowser.cpp
utopiadb/: BUGS  INSTALL  Makefile  TODO
utopiadb/src/: CMakeLists.txt  album.h  albumset.cpp  albumset.h  blockparser.cpp  blockparser.h  common.h  composer.h  configure.h.in  cover.cpp  cover.h  credit.cpp  databasemanager.h  genre.cpp  genre.h  individual.cpp  individual.h  mangapublisher.h  mangaseries.cpp  mangaseries.h  metabase.cpp  mood.cpp  publisher.cpp  qgzipfile.cpp  series.h  song.cpp  songedition.cpp  songedition.h  songfile.cpp  songfile.h  songset.cpp  songset.h  sqlmetabase.cpp  sqlmetabase.h  sqlparsers.cpp  sqlparsers.h  staff.cpp  tagid.cpp  utopiablock.cpp  utopiablock.h  (+4 more)
utopialyrics/: CMakeLists.txt
utopiaplayer/: AUTHORS  CMakeLists.txt  TODO
utopiaplayer/app/: CMakeLists.txt
utopiaplayer/app/src/: CMakeLists.txt  UtopiaPlayer.cpp
utopiaplayer/browser/: CMakeLists.txt
utopiaplayer/browser/src/: Browser.cpp  Browser.h  CMakeLists.txt
utopiaplayer/core/: CMakeLists.txt
utopiaplayer/core/adapters/: CurrentSongAdapter.h
utopiaplayer/core/doc/Common/: Mainpage.dox
utopiaplayer/core/doc/en/: index.docbook
utopiaplayer/core/icons/: CMakeLists.txt  generate-icons.php  generate_icons  hisc-action-utopia_play.svgz  hisc-app-utopiaplayer.svgz
utopiaplayer/core/interfaces/: DeviceInterface.h  ImportExportInterface.h  MediaSourceInterface.h  OutputInterface.h  PluginInterface.h
utopiaplayer/core/res/: UtopiaPlayer.qrc
utopiaplayer/core/scripts/: Doxyfile  LyricsEditor.qrc  UtopiaPlayer.pro  UtopiaPlayer.tag  build.sh  debug.sh  docs.sh  libUtopiaPlayer.pro  run.sh  utopiaplayer.sql
utopiaplayer/core/src/: APEv2.cpp  APEv2.h  AddRemoveTestDialog.cpp  AdvancedTag.cpp  AdvancedTag.h  AlbumList.cpp  AlbumList.h  Application.cpp  Application.h  ArtLabel.cpp  ArtLabel.h  AudioFile.cpp  AudioFile.h  AudioThread.cpp  AudioThread.h  BackgroundProcess.cpp  BackgroundProcess.h  CMakeLists.txt  ContextTabBar.cpp  ContextTabBar.h  Cuesheet.cpp  Cuesheet.h  DatabaseList.cpp  DatabaseList.h  DatabasePlugin.h  Device.h  DeviceManager.cpp  DeviceManager.h  FileTypeFactory.cpp  FileTypeFactory.h  ID3v1.cpp  ID3v1.h  ID3v2.cpp  ID3v2.h  InsertAlbum.cpp  InsertAlbum.h  InsertArtist.cpp  InsertArtist.h  InsertGenre.cpp  InsertGenre.h  (+79 more)
utopiaplayer/core/ui/: FileProperties.ui  InsertGenre.ui  LyricsEditor.ui  MediaLocationOptions.ui  OptionsDialog.ui  PluginSettings.ui  SongEdit.ui  TagEdit.ui  TagEditBasic.ui  UtopiaDBImportOptions.ui  Wizard-MediaLocations.ui
utopiaplayer/lyrics/: CMakeLists.txt
utopiaplayer/lyrics/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qrubylabel.cpp  qrubylabel.h  qrubymessagebox.cpp  qrubymessagebox.h  utopialyrics.cpp  utopialyrics.desktop  utopialyrics.kcfg  utopialyricssettings.kcfgc  utopialyricsui.rc  verseedit.cpp  verseedit.h  xmlrubyhandler.cpp  xmlrubyhandler.h
utopiaplayer/plugins/device/: CMakeLists.txt
utopiaplayer/plugins/device/ipod/src/: CMakeLists.txt  iPodNotes.cpp  iPodNotes.h  ipod.cpp  ipod.h  ipodnode.h  ipodplugin.cpp  ipodplugin.h  ipodtypes.h  mhdb.cpp  mhdb.h  utopiaplayer_ipod_plugin.desktop
utopiaplayer/plugins/output/: CMakeLists.txt
utopiaplayer/plugins/output/alsa/src/: ALSAPlugin.cpp  ALSAPlugin.h  CMakeLists.txt
utopiaplayer/plugins/output/gstreamer/src/: CMakeLists.txt  gstreamerplugin.cpp  gstreamerplugin.h  utopiaplayer_gstreamer_plugin.desktop
utopiaplayer/plugins/output/phonon/src/: CMakeLists.txt  phononplugin.cpp  phononplugin.h  utopiaplayer_phonon_plugin.desktop
utopiaplayer/plugins/output/xine/: CMakeLists.txt
utopiaplayer/plugins/output/xine/src/: CMakeLists.txt  utopiaplayer_xine_plugin.desktop  xineplugin.cpp  xineplugin.h
utopiaplayer/plugins/style/darkplastique/src/: PaletteEditor.cpp  PaletteEditor.h  PaletteEditor.ui  QDarkPlastiqueStyle.cpp  QDarkPlastiqueStyle.h
utopiaplayer/src/: CMakeLists.txt  UtopiaPlayer.cpp
utopiaplayer/tagger/src/: CMakeLists.txt  FileList.cpp  FileList.h
utopiatagger/: CMakeLists.txt
(+53 files in other folders)
