PROJECT(Utopia)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.5)

OPTION(IPOD_PLUGIN "Build the iPod plugin" ON)
OPTION(IPOD_PLUGIN_STATIC "Build the iPod plugin as a static plugin" OFF)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Qt4 REQUIRED)

ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(lyrics)
ADD_SUBDIRECTORY(plugins)
ADD_SUBDIRECTORY(tagger)
